Basic Error Handling
Add:
-Utils folder containing:
	./AppError.js = an extension of Error, including message and status
	parameters
	./handlerAsync.js = function that returns the given async
	function, catching for error in the process
-Basic error view page

Modified:
-Made <input> for User edit and register page to be required. Added to <form> so that error can be tested
-Added basic error handling middleware to index file while wrapping all
current async functions with the handlerAsync function

--- a/views/user/user_register.ejs
+++ b/views/user/user_register.ejs
@@ -11,18 +11,18 @@
 <body>
     <div>
         <h1>User Register</h1>
-        <form action="/user" method="post">
+        <form action="/user" method="post" novalidate>
             <div>
-                <label for="usernameFormInput">Username: </label>
-                <input type="text" id="usernameFormInput" placeholder="username" name="username">
+                <label for="usernameFormInput" >Username: </label>
+                <input type="text" id="usernameFormInput" placeholder="username" name="username" required>
             </div>
             <div>
                 <label for="emailFormInput">Email Address: </label>
-                <input type="email" id="emailFormInput" placeholder="name@example.com" name="email">
+                <input type="email" id="emailFormInput" placeholder="name@example.com" name="email" required>
             </div>
             <div>
                 <label for="passwordFormInput">Password: </label>
-                <input type="password" id="passwordFormInput" placeholder="password" name="password">
+                <input type="password" id="passwordFormInput" placeholder="password" name="password" required>
             </div>
             <button>Submit</button>
         </form>
