--- a/views/user/user_show.ejs
+++ b/views/user/user_show.ejs
@@ -13,5 +13,12 @@
     <h2><%= searchedUser.bio %> </h2>
     <a href="/user/<%= searchedUser._id %>/edit">edit</a>
     <a href="/user/<%= searchedUser._id %>/delete">delete</a>
+    <a href="/user/<%= searchedUser._id %>/score">score</a>
+    <h1>Scores</h1>
+    <% for (let score of searchedScore) { %>
+        <p><%= score.points %> </p>    
+        <p><%= score.date %> </p>    
+        <p><%= score.owner %> </p>    
+    <% } %>  
 </body>
 </html>
