--- a/views/main/scoreboard.ejs
+++ b/views/main/scoreboard.ejs
@@ -8,5 +8,14 @@
 </head>
 <body>
     <h1>Score Board</h1>
+    <div>
+        <ul>
+            <% for (let user of allUser) { %> 
+            <li>
+                <a href="/user/<%= user._id %> "><%= user.username  %> </a>
+            </li>
+            <% } %> 
+        </ul>
+    </div>
 </body>
 </html>
