--- a/views/main/scoreboard.ejs
+++ b/views/main/scoreboard.ejs
@@ -1,21 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Score Board</title>
-</head>
-<body>
+<% layout("/layouts/boilerplate.ejs") %>
     <h1>Score Board</h1>
     <div>
         <ul>
-            <% for (let user of allUser) { %> 
-            <li>
-                <a href="/user/<%= user._id %> "><%= user.username  %> </a>
-            </li>
-            <% } %> 
+
         </ul>
     </div>
-</body>
-</html>
+    <div class="header">
+        <h2 class="leaderboard-title">Leaderboard</h2>
+        <p class="leaderboard-sub-title">Here's a list of all the top-rankers from our users</p>
+    </div>
+    <div class="leaderboard-content">
+        <% for (let user of allUser) { %>
+            <div class="leaderboard-scores-box">
+                <p>
+                    <a href="/user/<%= user._id %> ">
+                        <%= user.username %>
+                    </a>
+                </p>
+                <div class="leaderboard-scores-player-scores">
+                    <p>user.score</p>
+                    <p>user.score</p>
+                </div>
+            </div>
+        <% } %>
+    </div>
