--- a/views/user/user_edit.ejs
+++ b/views/user/user_edit.ejs
@@ -1,28 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Edit</title>
-</head>
-
-<body>
-    <div>
+<% layout("/layouts/boilerplate.ejs") %>
+    <div class="form-box">
         <h1>User Edit Details</h1>
-        <form action="/user/<%= searchedUser._id %>?__method=PATCH" method="post">
+        <form id="form" action="/user/<%= searchedUser._id %>?__method=PATCH" method="post" novalidate>
             <div>
-                <label for="emailFormInput">Email: </label>
-                <input type="email" id="emailFormInput" placeholder="name@example.com" name="email" value="<%= searchedUser.email %>" required>
+                <label for="emailFormInput">Email Address: </label>
+                <input class="form-input" type="email" id="emailFormInput" placeholder="name@example.com" name="email"
+                    value="<%= searchedUser.email %>" required>
+                <div class="error error-email">&nbsp;</div>
             </div>
             <div>
                 <label for="bio">Bio: </label>
-                <textarea id="bioTextArea" maxlength="100" name="bio" required><%= searchedUser.bio %></textarea>
+                <textarea id="bioTextArea" maxlength="100" name="bio" required><%= searchedUser.bio %>
+                </textarea>
             </div>
             <button>Submit</button>
         </form>
     </div>
-</body>
-
-</html>
