Restrucuring, Session, and Flash
Add
-Routes folder to contain the routes used for user and sccores,
exporting as an express router to be used in index
-Added exress-sesion and connect-flash npm packages
-Session cookies that expires after a week
-Flash message partials
-Move navbar from boilerplate to become a partial

Modified
-Post, patch, and delete routes flashes a message on success or error
-Additional styling for partials

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -446,3 +446,17 @@ button {
     display: block;
     text-align: left;
 }
+
+
+/* ------- Flash Messages --------*/
+.success-box {
+    background-color: lightgreen;
+    padding: 10px;
+    box-sizing: border-box;
+} 
+
+.error-box {
+    background-color: #ffcccb;
+    padding: 10px;
+    box-sizing: border-box;
+} 
