--- a/views/user/user_show.ejs
+++ b/views/user/user_show.ejs
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<% layout("/layouts/boilerplate.ejs") %>
     <h1>PROFILE PAGE</h1>
     <h2><%= searchedUser.username %> </h2>
     <h2><%= searchedUser.email %> </h2>
@@ -18,7 +10,5 @@
     <% for (let score of searchedScore) { %>
         <p><%= score.points %> </p>    
         <p><%= score.date %> </p>    
-        <p><%= score.owner %> </p>    
+        <p><%= score.owner.username %> </p>    
     <% } %>  
-</body>
-</html>
