--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,8 +12,12 @@
         <div class="nav-links">
             <ul>
                 <li><a href="/scoreboard">Scoreboard</a></li>
-                <li><a href="/user/login">Login</a></li>
-                <li><a href="/user/register">Register</a></li>
+                <% if (!currentUser) { %>
+                    <li><a href="/user/login">Login</a></li>
+                    <li><a href="/user/register">Register</a></li>
+                <% } else { %>
+                    <li><a href="/user/logout">Logout</a></li>
+                <% } %>
             </ul>
         </div>
     </div>
