--- a/views/user/user_login.ejs
+++ b/views/user/user_login.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate.ejs") %>
     <div class="form-box">
         <h1>User Login</h1>
-        <form id="form" action="/user/:userID/login" method="post" novalidate>
+        <form id="form" action="/user/login" method="post" novalidate>
             <div>
                 <label for="usernameFormInput">Username: </label>
                 <input class="form-input" type="text" id="usernameFormInput" placeholder="username" name="username" required>
