--- a/views/user/user_show.ejs
+++ b/views/user/user_show.ejs
@@ -3,9 +3,11 @@
     <h2><%= searchedUser.username %> </h2>
     <h2><%= searchedUser.email %> </h2>
     <h2><%= searchedUser.bio %> </h2>
-    <a href="/user/<%= searchedUser._id %>/edit">edit</a>
-    <a href="/user/<%= searchedUser._id %>/delete">delete</a>
-    <a href="/user/<%= searchedUser._id %>/score">score</a>
+    <% if (currentUser && currentUser._id.equals(searchedUser._id)) { %>
+        <a href="/user/<%= searchedUser._id %>/edit">edit</a>
+        <a href="/user/<%= searchedUser._id %>/delete">delete</a>
+        <a href="/user/<%= searchedUser._id %>/score">score</a>
+    <% } %>  
     <h1>Scores</h1>
     <% for (let score of searchedScore) { %>
         <p><%= score.points %> </p>    
