--- a/views/user/user_register.ejs
+++ b/views/user/user_register.ejs
@@ -1,23 +1,26 @@
 <% layout("/layouts/boilerplate.ejs") %>
-    <div class="form-box">
-        <h1>User Register</h1>
-        <form id="form" action="/user" method="post" novalidate>
-            <div>
-                <label for="usernameFormInput">Username: </label>
-                <input class="form-input" type="text" id="usernameFormInput" placeholder="username" name="username" required>
-                <div class="error error-username">&nbsp;</div>
-            </div>
-            <div>
-                <label for="emailFormInput">Email Address: </label>
-                <input class="form-input" type="email" id="emailFormInput" placeholder="name@example.com" name="email" required>
-                <div class="error error-email">&nbsp;</div>
-            </div>
-            <div>
-                <label for="passwordFormInput">Password: </label>
-                <input class="form-input" type="password" id="passwordFormInput" placeholder="password" name="password"
-                    required>
-                <div class="error error-password">&nbsp;</div>
-            </div>
-            <button>Submit</button>
-        </form>
+    <div class="form-wrapper">
+        <div class="form-box">
+            <h1 class="form-title">Sign Up To Typnonym</h1>
+            <form id="form" class="form-content" action="/user" method="post" novalidate>
+                <div>
+                    <label for="usernameFormInput" class="usernameclass">Username: </label>
+                    <input class="form-input" type="text" id="usernameFormInput" placeholder="username" name="username" required>
+                    <div class="error error-username">&nbsp;</div>
+                </div>
+                <div>
+                    <label for="emailFormInput">Email Address: </label>
+                    <input class="form-input" type="email" id="emailFormInput" placeholder="name@example.com" name="email" required>
+                    <div class="error error-email">&nbsp;</div>
+                </div>
+                <div>
+                    <label for="passwordFormInput">Password: </label>
+                    <input class="form-input" type="password" id="passwordFormInput" placeholder="password" name="password"
+                        required>
+                    <div class="error error-password">&nbsp;</div>
+                </div>
+                <button class="form-button">Sign Up</button>
+            </form>
+        </div>
     </div>
+    
