Routes Controllers, Favicon, and Game changes
-Removed user score route which was initially made for testing purposes
-Add favicon images of varying size to images folder under public
-Add one more user to seeds file
-Fix bug where user cannot register because Joi schema's password for
user was accidentally set to a number instead of string
-Restructured all routes into its separate controllers files
-Style "delete confirmation" and show page (score option taken out)
-Modified typing game javascript logic. The timer variables are now set
before its called, ensuring no time delay between fetching the first word and
the timer starting. Function changeWord now only resolve when while loop
ends after finding appropriate word instead of calling itself again
through recursion.
-Modified boilerplate to contain favicon and display title based on the
provided title value of each route.

--- a/views/user/user_delete.ejs
+++ b/views/user/user_delete.ejs
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delete</title>
-</head>
-<body>
-    <h1>Confirm Delete</h1>
-    <form action="/user/<%= searchedUser._id %>?__method=DELETE" method="post">
-        <button>DELETE</button>
-    </form>    
-</body>
-</html>
+<% layout("/layouts/boilerplate.ejs") %>
+    <div class="form-wrapper">
+        <div class="form-box">
+            <h1 class="form-title">Confirm Delete</h1>
+            <form id="form" action="/user/<%= searchedUser._id %>?__method=DELETE" method="post" novalidate>
+                <button class="form-button">Delete</button>
+            </form>
+        </div>
+    </div>
+
+    
+    
