--- a/public/css/style.css
+++ b/public/css/style.css
@@ -324,6 +324,10 @@ button {
     justify-content: space-between;
 }
 
+.profile-bio {
+    word-break: break-all; 
+}
+
 
 
 /* ---------------------NAVBAR------------------------------------------ */
@@ -483,6 +487,40 @@ button {
 }
 .form-content div label {
     display: none
+}
+
+.form-edit-content {
+    margin-top: 50px;
+}
+
+.form-edit-content div {
+    margin: 20px 0px;
+    text-align: left;
+}
+
+.form-bio {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-bio label {
+    margin: 20px 0px;
+    text-align: left;
+}
+
+.bio-text-area {
+    border-width: 1px;
+    padding: 10px;
+    background-color: rgb(240,243,246);
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji; 
+    resize: none;
+    box-sizing: border-box;
+    font-size: 18px;
+    width: 100%;
+    display: block;
+    text-align: left;
+    margin-top: 10px;
+    border-radius: 5px;
 }
 .form-button {
     margin: 50px 0px;
