--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -5,25 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boilerplate</title>
+    <% if (typeof title != "undefined") { %> 
+        <title>Typnonym - <%= title  %></title>
+    <% } else { %>
+        <title>Typnonym</title>
+    <% } %> 
     <link rel="stylesheet" href="/css/style.css">
     <script defer src="/javascript/game-page-javascript.js"></script>
     <script defer src="/javascript/form-design.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-    </style> 
+    </style>
 </head>
 
 <body>
-    <%- include("../partials/navbar.ejs")  %> 
-    <div class="main-container">
-        <div class="container">
-            <div>
-                <%- include("../partials/flashMessage.ejs")  %> 
+    <%- include("../partials/navbar.ejs") %>
+        <div class="main-container">
+            <div class="container">
+                <div>
+                    <%- include("../partials/flashMessage.ejs") %>
+                </div>
+                <%- body %>
             </div>
-            <%- body %>
         </div>
-    </div>
 </body>
 
 </html>
